--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,15 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# CMake Files
+CMakeCache.txt.*
+
+# MacOS files
 .DS_Store
+
+# IDE files
+.idea
+.vscode
+
+# Directory
 build*
-CMakeLists.txt.*
-.vscode*
